--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,7 +8,7 @@ jobs:
     timeout-minutes: 2
     strategy:
       matrix:
-        node-version: ["20.x", "22.x", "23.x"]
+        node-version: ["22.x", "23.x"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
