--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 2
     strategy:
+      fail-fast: false
       matrix:
         node-version: ["22.x", "23.x"]
+        
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -23,8 +25,4 @@ jobs:
 
       - name: 🏗 Run build
         run: yarn build
-
-      - name: 🔦 Run lint
-        run: yarn lint
-
 
