--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/ws": "^8.5.13",
     "got": "^14.4.5",
     "prettier": "^3.4.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "ws": "^8.18.0"
   },
