--- a/.github/workflows/validate-oldnode.yml
+++ b/.github/workflows/validate-oldnode.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn install && yarn add -D tsx
 
       - name: ✅ Run tests
-        run: node --import=tsx/esm --test __tests__/**/*.test.ts
+        run: node --import=tsx/esm --test './__tests__/**/*.test.ts'
 
       - name: 🏗 Run build
         run: yarn build
