--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "@firstassethr/node-http-to-fetch",
   "version": "1.3.4",
   "devDependencies": {
-    "@types/node": "^22.10.5",
-    "@types/ws": "^8.5.13",
-    "got": "^14.4.5",
-    "prettier": "^3.4.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "ws": "^8.18.0"
+    "@mjackson/node-fetch-server": "^0.6.1",
+    "@types/node": "^22.14.0",
+    "@types/ws": "^8.18.1",
+    "got": "^14.4.7",
+    "prettier": "^3.5.3",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "ws": "^8.18.1"
   },
   "scripts": {
     "test": "yarn test:path --test-reporter=spec __tests__/**/*.test.ts",
@@ -37,6 +38,6 @@
   "repository": "https://github.com/firstassethr/node-http-to-fetch",
   "types": "dist/_types/main.d.ts",
   "type": "module",
-  "packageManager": "yarn@4.6.0",
+  "packageManager": "yarn@4.8.1",
   "license": "UNLICENCED"
 }
